# santa-lang-blitzen

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LANG.txt  Makefile  PLAN.md  PROBLEM.md  README.md  resume-plan.sh  rust-toolchain.toml
.claude/agents/: rust-senior-reviewer.md  test-coverage-reviewer.md  vm-lang-perf-reviewer.md
.claude/commands/: perf-identify.md  perf-implement.md  perf-verify.md
.github/workflows/: build-cli.yml  build.yml  publish.yml  release.yml  test.yml
benchmark-results/: aoc2022_20251128_005827.md  aoc2022_20251128_005920.md  aoc2022_20251128_005943.md
benchmark/scripts/: analyze.sh  compare.py  run_benchmarks.sh
benchmarks/: Cargo.toml
benchmarks/benches/: vm_benchmarks.rs
docs/: ARCHITECTURE.md
examples/: aoc2018_day01.santa  aoc2018_day02.santa  aoc2018_day03.santa  aoc2018_day04.santa  aoc2018_day05.santa  aoc2018_day06.santa  aoc2018_day07.santa  aoc2018_day08.santa  aoc2018_day09.santa  aoc2018_day10.santa  aoc2018_day11.santa  aoc2018_day12.santa  aoc2018_day13.santa  aoc2018_day14.santa  aoc2022_day01.santa  aoc2022_day02.santa  aoc2022_day03.santa  aoc2022_day04.santa  aoc2022_day05.santa  aoc2022_day06.santa  aoc2022_day07.santa  aoc2022_day08.santa  aoc2022_day09.santa  aoc2022_day09_2.santa  aoc2022_day10.santa  aoc2022_day11.santa  aoc2022_day12.santa  aoc2022_day13.santa  aoc2022_day14.santa  aoc2022_day15.santa  aoc2022_day16.santa  aoc2022_day17.santa  aoc2022_day18.santa  aoc2022_day19.santa  aoc2022_day20.santa  aoc2022_day21.santa  aoc2022_day22.santa  aoc2022_day23.santa  aoc2022_day24.santa  aoc2022_day25.santa  (+16 more)
lang/: Cargo.toml
runtime/cli/: Cargo.toml
runtime/cli/src/: external.rs  main.rs  output.rs
runtime/cli/tests/: integration_tests.rs
(+17 files in other folders)
