[workspace]
resolver = "2"
members = ["lang", "runtime/cli", "benchmarks"]

[workspace.package]
version = "0.0.1"
authors = ["Edd Mann <the@eddmann.com>"]
documentation = "https://eddmann.com/santa-lang/"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
