[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2024"

[dependencies]
lang = { path = "../lang" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm_benchmarks"
harness = false
