[package]
name = "santa-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
lang = { path = "../../lang" }
rustyline = "14.0"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[[bin]]
name = "santa-cli"
path = "src/main.rs"
