[package]
name = "cli"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2024"

[features]
default = []
profile = ["pprof"]

[dependencies]
atty = "0.2.14"
lang = { path = "../../lang" }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["json"] }
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[[bin]]
name = "santa-cli"
path = "src/main.rs"
